--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,12 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "googlesearch-python>=1.3.0",
+    "graphviz>=0.21",
     "ipykernel>=6.29.5",
+    "numpy>=2.3.1",
     "openai>=1.97.0",
-    "openai-agents>=0.2.2",
+    "openai-agents[litellm,viz,voice]>=0.2.2",
+    "pandas>=2.3.1",
     "pydantic>=2.11.7",
+    "sounddevice>=0.5.2",
 ]
