--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi>=0.116.1",
     "googlesearch-python>=1.3.0",
     "graphviz>=0.21",
     "ipykernel>=6.29.5",
@@ -14,4 +15,6 @@ dependencies = [
     "pandas>=2.3.1",
     "pydantic>=2.11.7",
     "sounddevice>=0.5.2",
+    "uvicorn[standard]>=0.35.0",
+    "youtube-transcript-api>=1.2.1",
 ]
