--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "googlesearch-python>=1.3.0",
     "graphviz>=0.21",
     "ipykernel>=6.29.5",
+    "jinja2>=3.1.6",
     "numpy>=2.3.1",
     "openai>=1.97.0",
     "openai-agents[litellm,viz,voice]>=0.2.2",
